# dv-toolbox

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yaml  .rustfmt.toml  .vsconfig  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Vagrantfile  go.mod  justfile  taskfile.dist.yaml  taskfile_windows.yaml  test.go  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
crates/dv-toolbox-core/: Cargo.toml
crates/dv-toolbox-core/resources/test/dv_multiframe/: README.md  sony_good_quality.dv
crates/dv-toolbox-core/src/: lib.rs  main.rs
crates/dv-toolbox-core/src/ffutil/: avio_context.rs  format.rs  mod.rs  rational.rs
crates/dv-toolbox-core/src/ffutil/avio_context/: tests.rs
crates/dv-toolbox-core/src/ffutil/format/: tests.rs
crates/dv-toolbox-core/src/file/: info.rs  mod.rs
crates/dv-toolbox-core/src/file/info/: tests.rs
crates/dv-toolbox-core/src/ioutil/: mod.rs
crates/dv-toolbox-core/src/pack/: aaux_source.rs  aaux_source_control.rs  binary_group.rs  camera_common.rs  camera_consumer_1.rs  common.rs  date.rs  mod.rs  testutil.rs  time.rs  types.rs  util.rs  vaux_source.rs  vaux_source_control.rs
crates/dv-toolbox-core/src/pack/aaux_source/: tests.rs
crates/dv-toolbox-core/src/pack/aaux_source_control/: tests.rs
crates/dv-toolbox-core/src/pack/aaux_source_control/snapshots/: valid_playback_speeds.snap
crates/dv-toolbox-core/src/pack/binary_group/: tests.rs
crates/dv-toolbox-core/src/pack/camera_consumer_1/: tests.rs
crates/dv-toolbox-core/src/pack/camera_consumer_1/snapshots/: valid_focus_positions.snap  valid_iris_values.snap
crates/dv-toolbox-core/src/pack/date/: tests.rs
crates/dv-toolbox-core/src/pack/time/: tests.rs
crates/dv-toolbox-core/src/pack/types/: tests.rs
crates/dv-toolbox-core/src/pack/util/: tests.rs
crates/dv-toolbox-core/src/pack/vaux_source/: tests.rs
crates/dv-toolbox-core/src/pack/vaux_source_control/: tests.rs
crates/dv-toolbox-core/src/testutil/: mod.rs  test_cases.rs
scripts/: install-tools.ps1
scripts/lib/windows/: download-status.ps1  download.ps1
scripts/triplets/: x64-linux-clang-release.cmake  x64-linux-clang.cmake
