[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["James Johnston", "The dv-toolbox Authors"]
categories = ["multimedia", "multimedia::encoding", "multimedia::video"]
edition = "2021"
keywords = ["codec", "multimedia", "video"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnstonJ/dv-toolbox"
rust-version = "1.81"
version = "0.1.0"

[workspace.metadata.bin]
cargo-llvm-cov = { version = "^0.6" }

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_imports = "deny"
unused_lifetimes = "deny"

[workspace.lints.clippy]
tests_outside_test_module = "deny"

[profile.release]
codegen-units = 1
lto = true
