[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["James Johnston", "The dv-toolbox Authors"]
categories = ["multimedia", "multimedia::encoding", "multimedia::video"]
edition = "2021"
keywords = ["codec", "multimedia", "video"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnstonJ/dv-toolbox"
rust-version = "1.81"
version = "0.1.0"

[workspace.dependencies]
arbitrary-int = "1.2.7"
bitbybit = "=1.3.2"
data-encoding = "2.6.0"
derive_more = "1.0.0"
display-error-chain = "0.2.1"
garde = "0.20.0"
googletest = "0.12.0"
insta = "1.40.0"
itertools = "0.13.0"
libc = "0.2.159"
num = "0.4.3"
page_size = "0.6.0"
regex = "1.11.0"
# The version for rsmpeg is closely tied to the FFmpeg version that we set in vcpkg.json.
rsmpeg = "0.15.1"
rstest = "0.23.0"
# Temporarily in place while we are patching rusty_ffmpeg
rusty_ffmpeg = { version = "0.16.1", features = ["ffmpeg7"] }
serde = "1.0.210"
snafu = { version = "0.8.5", features = ["rust_1_81"] }
stdext = "0.3.3"

[patch.crates-io]
rsmpeg = { git = "https://github.com/larksuite/rsmpeg", rev = "0319be747095398f481fdf23b562c57dd0ff52c0" }
rusty_ffmpeg = { git = "https://github.com/JohnstonJ/rusty_ffmpeg/", branch = "james/fix-windows-linking" }

[workspace.metadata.bin]
cargo-expand = { version = "^1.0.90" }
cargo-insta = { version = "^1.40.0" }
cargo-llvm-cov = { version = "^0.6.13" }

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "warn"
unreachable_pub = "warn"
unused_imports = "deny"
unused_lifetimes = "deny"

[workspace.lints.clippy]
tests_outside_test_module = "deny"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
codegen-units = 1
lto = true
