[package]
name = "dv-toolbox-core"
authors.workspace = true
categories.workspace = true
description = "Library for working with and restoring videos in Digital Video (DV) format."
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies.ffmpeg-next]
# The version for ffmpeg-next is tied to the same major/minor version that we set in vcpkg.json.
version = "~7.0.4"
default-features = false
features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
    "static",
    "filter",
]
