[package]
name = "dv-toolbox-core"
authors.workspace = true
categories.workspace = true
description = "Library for working with and restoring videos in Digital Video (DV) format."
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["deref", "deref_mut"] }
garde = { workspace = true, features = ["derive", "regex"] }
ffmpeg-next = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
num = { workspace = true }
page_size = { workspace = true }
snafu = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
googletest = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
