[package]
name = "dv-toolbox-core"
authors.workspace = true
categories.workspace = true
description = "Library for working with and restoring videos in Digital Video (DV) format."
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
arbitrary-int = { workspace = true, features = ["std", "serde"] }
bitbybit = { workspace = true }
derive_more = { workspace = true, features = [
    "as_ref",
    "deref",
    "deref_mut",
    "from",
    "try_from",
] }
garde = { workspace = true, features = ["derive", "regex", "serde"] }
itertools = { workspace = true }
libc = { workspace = true }
num = { workspace = true }
page_size = { workspace = true }
rsmpeg = { workspace = true }
# Temporarily in place while we are patching rusty_ffmpeg
rusty_ffmpeg = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
stdext = { workspace = true }

[dev-dependencies]
data-encoding = { workspace = true }
display-error-chain = { workspace = true }
insta = { workspace = true }
googletest = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
